# AgentIron

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/actions/opencode-review/: action.yml
.github/scripts/: opencode-formal-review-prompt.md  submit-opencode-formal-review.mjs
.github/workflows/: opencode-formal-review.yml  opencode-review.yml  opencode.yml  pr-agent.yml  pull-request.yml  release-manual.yml  release-patch.yml  release.yml
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  communities.json  god_nodes.json  graph.html  graph.json  index.html  manifest.json  suggested_questions.json
openspec/changes/add-plugin-auth-and-rich-results/: design.md  proposal.md  tasks.md
openspec/changes/add-plugin-runtime-support/: design.md  proposal.md  tasks.md
openspec/changes/add-release-builds/: design.md  proposal.md  tasks.md
openspec/changes/add-skills-and-handoff-support/: tasks.md
openspec/changes/enable-codex-kimi-oauth-authentication/: design.md  proposal.md  tasks.md
openspec/changes/simplify-manual-release-workflow/: design.md  proposal.md  tasks.md
openspec/changes/standardize-transient-error-notifications/: design.md  proposal.md  tasks.md
openspec/changes/support-provider-oauth-authentication/: design.md  proposal.md  tasks.md
scripts/: bump_version.py
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_provider_credentials.sql
src-tauri/src/: credential_store.rs  lib.rs  main.rs  provider_box.rs  state.rs
src-tauri/src/commands/: agent.rs  chat.rs  mod.rs  models.rs  oauth.rs  snip.rs
src/components/: NotificationStack.tsx  NotificationToast.tsx
src/components/agents/: AgentCard.tsx  AgentConfig.tsx  AgentList.tsx
src/components/chat/: ApprovalBar.tsx  ChatArea.tsx  CodeBlock.tsx  ContextIndicator.tsx  DirectoryIndicator.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageInput.tsx  ModelSwitcher.tsx  ToolActivityLine.tsx  ToolActivitySummary.tsx  ToolCallMessage.tsx  ToolDetailRenderers.tsx  groupEntries.ts  toolUtils.tsx
src/components/common/: Button.tsx  Input.tsx  Modal.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  Tab.tsx  TabBar.tsx
src/components/mcp/: McpPanel.tsx  McpServerCard.tsx  (+1 more)
src/context/: AgentContext.tsx  ChatContext.tsx  McpContext.tsx  NotificationContext.tsx  SettingsContext.tsx  SkillCatalogContext.tsx  UIContext.tsx
src/lib/: models.ts  timeago.ts  tools.ts
src/types/: agent.ts  message.ts  notification.ts  plugin.ts  settings.ts  task.ts
(+38 files in other folders)
