[package]
name = "agentiron"
version = "0.1.0"
description = "Cross-platform AI agent client for iron-core"
authors = ["AgentIron"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "agentiron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
iron-core = { git = "https://github.com/AgentIron/iron-core.git", rev = "302d82acad429b39592913fba61e9d8f5b21b45e", features = ["embedded-python"] }
iron-providers = "0.1.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
xcap = "0.3.3"
image = "0.25"
base64 = "0.22"
tauri-plugin-dialog = "2"

# Force reqwest to use native-tls instead of rustls
# (rustls build script blocked by Windows Application Control policy)
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "stream", "multipart", "charset", "http2", "system-proxy"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
